fix: nav title on smaller screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -349,7 +349,7 @@ article header {
 		opacity: 0.4;
 	  }	  
   h2 {
-    padding: 0 2% inherit 2%;
+    padding: 0 16px 0 16px;
     margin: 0;
 	font-weight: normal;
 	font-size: 48px;
@@ -387,7 +387,6 @@ article header {
 
     h2 {
       font-size:28px;
-      padding: 0 16px 0 16px;
 
       span {
         display: block;
@@ -904,7 +903,12 @@ footer {
   nav {
     width: 100%;
     height: 50px;
-    padding: 0 24px 0 24px;
+    padding: 0 8px 0 8px;
+  
+    a h1{
+      margin: 12px 0 12px 4px;
+      
+    }
 
     .menu {
       position: absolute;
@@ -1001,7 +1005,7 @@ footer {
       }
     }
 
-project/achievements.html    .readmore-target figure figcaption {
+.readmore-target figure figcaption {
       height: 0;
       padding: 0;
     }
@@ -1053,12 +1057,14 @@ project/achievements.html    .readmore-target figure figcaption {
     width: 30%;
     margin: 3% 5%;
   }
-    nav {
-      padding: 0 8px;
+
+  nav {
+    padding: 0 4px 0 4px;
+
     a h1{
-      margin: 12px 0 12px 8px;
+      margin: 12px 0 12px 4px;
       span{
-        font-size: 12px;
+        letter-spacing: -1px;
       }
     }
   }
